# ignition-package-maker

./: .gitignore  README.md  pyproject.toml
docs/: index.html
src/ipm/: __init__.py  build.py  cli.py  init.py
tests/: __init__.py  test_build.py
