[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ignition-package-maker"
version = "0.0.1"
description = "Ignition Package Maker - convert Ignition script-python modules into publishable Python packages"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.11"
authors = [
    { name = "Noah Burnette", email = "noah.burnette.ext@verkor.com" },
]
keywords = ["ignition", "scada", "package-manager", "inductive-automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
ipm = "ipm.cli:app"

[project.urls]
Homepage = "https://github.com/ignition-package-manager/ipm"
Repository = "https://github.com/ignition-package-manager/ipm"

[tool.hatch.build.targets.wheel]
packages = ["src/ipm"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
